@@ -33,6 +33,7 @@ import java.io.*;
 import java.net.*;
 
 public class ProxyHTTP implements Proxy{
+  private static int DEFAULTPORT=80;
   private String proxy_host;
   private int proxy_port;
   private String host;
@@ -45,7 +46,18 @@ public class ProxyHTTP implements Proxy{
   private String passwd;
 
   public ProxyHTTP(String proxy_host){
-    this(proxy_host, 80);
+    int port=DEFAULTPORT;
+    String host=proxy_host;
+    if(proxy_host.indexOf(':')!=-1){
+      try{
+	host=proxy_host.substring(0, proxy_host.indexOf(':'));
+	port=Integer.parseInt(proxy_host.substring(proxy_host.indexOf(':')+1));
+      }
+      catch(Exception e){
+      }
+    }
+    this.proxy_host=host;
+    this.proxy_port=port;
   }
   public ProxyHTTP(String proxy_host, int proxy_port){
     this.proxy_host=proxy_host;
@@ -105,5 +117,8 @@ public class ProxyHTTP implements Proxy{
     in=null;
     out=null;
     socket=null;
+  }
+  public static int getDefaultPort(){
+    return DEFAULTPORT;
   }
 }
